@@ -9,6 +9,10 @@ cover-package=deform
 cover-erase=1
 exclude=test_demo
 
+[aliases]
+dev = develop easy_install deform[testing]
+docs = develop easy_install deform[docs]
+
 [compile_catalog]
 directory = deform/locale
 domain = deform
